--- a/views/admin-audit.ejs
+++ b/views/admin-audit.ejs
@@ -16,6 +16,7 @@
         </div>
         <nav class="top-nav">
           <a href="/">Home</a>
+          <a href="/tools">Tools</a>
           <a href="/admin/users">Manage Users</a>
           <form class="top-nav-form" action="/logout" method="post">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
