--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
                 <em>(can pin)</em>
               <% } %>
             </span>
+            <a href="/tools">Tools</a>
             <% if (userRole === 'admin') { %>
               <a href="/admin/users">Manage Users</a>
               <a href="/admin/audit">Audit Log</a>
